osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[Optional[wut]].txt
error: expected simple type in `Optional`
--> main.sml:1:14
     |
   1 | Foo: Optional[wut] = JsonData(path='$.foo')
     |               ^ got unknown non-generic type `wut`